parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail32.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail32.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
        ],
        actual: Eof,
        invalid_row: 1,
        invalid_col: 41,
    },
)
