parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail37.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail37.json
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Illegal(
            None,
        ),
        invalid_row: 1,
        invalid_col: 4,
    },
)
